# gifee

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy.yml
src/: App.tsx  index.css  main.tsx
src/components/: ConversionModal.tsx  ErrorLogger.tsx  ExportButton.tsx  FileUpload.tsx  Providers.tsx  SettingsPanel.tsx  ThemeToggle.tsx  Timeline.tsx  TimelineSlider.tsx  VideoConverter.tsx  VideoPreview.tsx  theme-provider.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx
src/hooks/: useFrameExtraction.ts  useVideoLoop.ts  useVideoMetadata.ts
src/lib/: converter.ts  ffmpeg.ts  gifConverter.ts  testGifPipeline.ts  videoProcessor.ts
src/types/: index.ts
src/utils/: formatTime.ts  videoHelpers.ts
src/workers/: README.md  gifWorker.ts  gifWorkerClient.ts
wasm/: .gitignore  Cargo.toml  README.md
wasm/src/: lib.rs
