[package]
name = "gifee_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Gifee Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
gif = { version = "0.13", features = ["raii_no_panic"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"